@@ -34,3 +34,4 @@
   30-Jun-2021  - V0.42 Add reload() public methods to feature and cofactor provider modules
    1-Jul-2021  - V0.43 Adjustment linting rules to preserve unreferenced internal methods
    2-Jul-2021  - V0.44 Add the remaining subset of the antibody data from SAbDab and add taxonomy filtering for CARD features
+   2-Jul-2021  - V0.45 Handle to testing case lacking taxonomy in CARDTargetFeatureProvider()
